--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.11",
+    "@tanstack/react-query": "^4.14.1",
+    "axios": "^1.1.3",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
     "react-responsive": "^9.0.0",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
