--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.11",
     "@tanstack/react-query": "^4.14.1",
+    "@tanstack/react-query-devtools": "^4.14.1",
     "axios": "^1.1.3",
     "next": "13.0.0",
     "react": "18.2.0",
