--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^4.14.1",
     "@tanstack/react-query-devtools": "^4.14.1",
     "axios": "^1.1.3",
+    "lodash": "^4.17.21",
     "next": "13.0.0",
     "otp-input-react": "^0.3.0",
     "react": "18.2.0",
@@ -27,6 +28,7 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.187",
     "@types/node": "18.11.7",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
