--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "next": "13.0.0",
     "otp-input-react": "^0.3.0",
     "react": "18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
     "react-responsive": "^9.0.0",
+    "react-select": "^5.6.0",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.0",
     "slick-carousel": "^1.8.1"
@@ -33,6 +35,7 @@
     "@types/lodash": "^4.14.187",
     "@types/node": "18.11.7",
     "@types/react": "18.0.24",
+    "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "18.0.8",
     "@types/react-slick": "^0.23.10",
     "autoprefixer": "^10.4.12",
